Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30486

Table is not eliminated in bb-11.0

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 11.0.0
    • 11.0.0
    • Optimizer
    • None

    Description

      explain SELECT c_custkey, c_name AS currency2 FROM partsupp LEFT JOIN part ON (
      p_partkey = ps_partkey ) JOIN supplier ON (s_suppkey = ps_suppkey) JOIN lineite
      m ON ( ps_suppkey = l_suppkey ) JOIN orders ON ( l_orderkey = o_orderkey ) JOIN
      customer ON ( o_custkey = c_custkey ) HAVING c_custkey > 150;
      In 11.0 shows the table 'part' which should have been eliminated.
      This also causes a small degradation in performance.

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              monty Michael Widenius
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d
                  2d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.